<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_TwoPosActuator" Id="{a1b2c3d4-e5f6-7890-abcd-ef1234567890}">
    <Declaration><![CDATA[TYPE ST_TwoPosActuator :
STRUCT
    // Configuration
    cfg : ST_TwoPosActuator_Cfg;
    
    // Current state and status
    state : E_TwoPosActuator_State;
    stsAdvanced : BOOL;
    stsRetracted : BOOL;
    stsMoving : BOOL;
    stsFaulted : BOOL;
    faultCode : E_TwoPosActuator_Fault;
    lastFaultCode : E_TwoPosActuator_Fault;
    
    // Commands (program level - auto mode)
    pcmdAdvance : BOOL;
    pcmdRetract : BOOL;
    
    // Commands (operator level - manual mode)
    ocmdAdvance : BOOL;
    ocmdRetract : BOOL;
    
    // Permissives for advance and retract
    permAdvance : ST_PermIntlk_HMI;
    permRetract : ST_PermIntlk_HMI;
    
    // HMI interface
    HMI : ST_TwoPosActuator_HMI;
    
    // Mode control
    automatic : BOOL;    // TRUE=auto (use pcmd*), FALSE=manual (use HMI.cmd*)
    
    // Enable control
    enable : BOOL := TRUE;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>
