<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_TwoPosActuator_HMI" Id="{63b6ee59-9667-4f23-9c14-25ae27d6f3f5}">
    <Declaration><![CDATA[TYPE ST_TwoPosActuator_HMI :
STRUCT
    // Status indicators for HMI display
    stsAdvanced : BOOL;
    stsRetracted : BOOL;
    stsMoving : BOOL;
    stsFaulted : BOOL;
    stsStateString : STRING(40);
    
    // Fault information
    faultCode : E_TwoPosActuator_Fault;
    faultString : STRING(80);
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>
