<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_TwoPosActuator_HMI_sts" Id="{6f4ac52b-3baf-4f1c-88e9-1a49e7b0f4e6}">
    <Declaration><![CDATA[TYPE ST_TwoPosActuator_HMI_sts :
STRUCT
    Advanced : BOOL;
    Retracted : BOOL;
    Moving : BOOL;
    Faulted : BOOL;
    StateString : STRING(40);
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>
