<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_TwoPosActuator_IO" Id="{94778f61-9f20-4d69-b3a9-0e6c73d74e72}">
    <Declaration><![CDATA[TYPE ST_TwoPosActuator_IO :
STRUCT
    // Inputs
    inFbkAdvanced : BOOL;   // Advanced sensor feedback
    inFbkRetracted : BOOL;  // Retracted sensor feedback

    // Outputs
    outValveAdvance : BOOL; // Command to advance valve/solenoid
    outValveRetract : BOOL; // Command to retract valve/solenoid
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>
