<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_TwoPosActuator_Sts" Id="{9f3c1d25-5bc8-4f9a-bb79-03c2bd23d3df}">
    <Declaration><![CDATA[TYPE ST_TwoPosActuator_Sts :
STRUCT
    state : E_TwoPosActuator_State;
    stsAdvanced : BOOL;
    stsRetracted : BOOL;
    stsMoving : BOOL;
    stsFaulted : BOOL;
    faultCode : E_TwoPosActuator_Fault;
    lastFaultCode : E_TwoPosActuator_Fault;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>
