<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_PermIntlk_HMI" Id="{58cdbce3-aeab-497c-b4b1-b8b63de19caf}">
    <Declaration><![CDATA[TYPE ST_PermIntlk_HMI :
STRUCT
	sts : ST_PermIntlk_sts;
	cfg : ST_PermIntlk_cfg;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>