<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_PermIntlk_sts" Id="{a69785e2-4ebb-4762-9b68-73bc834e7b09}">
    <Declaration><![CDATA[TYPE ST_PermIntlk_sts :
STRUCT
    PermIntlk : INT;    // Computed bitwise permissive status (each bit 1 = OK)
    OK        : BOOL;   // Overall status (TRUE if all required bits are OK)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>